--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,13 @@
 	<string name="sign_up_personal_information_label">정보주체의 개인정보 및 권리 보호를 위해「개인정보 보호법」및 관계 법령이 정한 바를 준수하여 안전하게 관리하고 있습니다.\n자세한 사항은 개인정보처리방침에서 확인할 수 있습니다.</string>
 	<string name="sign_up_confirm">동의하고 본인인증하기</string>
 	<string name="sign_up_account_info">계정정보</string>
+	<string name="sign_up_error_name">* 한글입력, 최소2자, 최대 8자\n* 공백 입력 불가</string>
+	<string name="sign_up_error_mobile">* 휴대전화 번호 11자리를 입력한다. (하이픈 \" - \"는 제외)\n* 공백 입력 불가</string>
+	<string name="sign_up_error_auth_number">* 숫자 6자리\n* 공백 입력 불가</string>
+	<string name="sign_up_error_id">* 소문자 + 숫자, 조합만 허용, 최소 8자, 최대 16자\n* 공백 입력 불가</string>
+	<string name="sign_up_error_pw">* 소문자 + 대문자 + 특수문자(!@#$) + 숫자 조합만 허용\n 최소14자리, 최대 20자리, 대문자가 최소 1개 이상 포함\n* 공백 입력 불가</string>
+	<string name="sign_up_error_pw_check">* 비밀번호가 일치하지 않습니다.</string>
+	<string name="sign_up_error_nickname">* 최소2자, 최대10자 입력가능</string>
 
 	<!--    계정 찾기	-->
 	<string name="new_password">새 비밀번호</string>
@@ -25,7 +32,7 @@
 	<string name="common_duplication_confirm">중복확인</string>
 	<string name="common_name">이름</string>
 	<string name="common_mobile">휴대전화</string>
-	<string name="common_mobile_no_hyphen">휴대전화 (- 없이)</string>
+	<string name="common_mobile_no_hyphen">휴대전화 (\" - \" 없이)</string>
 	<string name="common_auth_number">인증번호</string>
 	<string name="common_star">*</string>
 	<string name="common_id">아이디</string>
@@ -98,7 +105,6 @@
 	<string name="transit_confirm_description">우리가 1년 동안 대중교통을 이용한다면, 온실가스 배출량을 20%이상 줄일 수 있으며 특히, 전기버스나 철도와 같은 친환경적인 대중교통 수단을 채택하면 배충량 감소가 더욱 커질 수 있어요!</string>
 	<string name="transit_confirm_btn_description">만약 계좌 등록을 안 했다면?\n계좌 등록 페이지로 넘어갑니다!</string>
 	<string name="transit_confirm_btn_title">이용 내역 인증하기</string>
-
 
 
 </resources>
