--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,18 +104,20 @@
 	<string name="attend_bottom_sheet_done">확인</string>
 
 	<!-- 전기 이동수단 인증 -->
-	<string name="electric_vehicle_confirm_title">전기 이동수단 이용을 인증해보세요!</string>
-	<string name="electric_vehicle_confirm_description">우리가 1년 동안 전기 자전거나 킥보드를 이용한다면 \n자동차에서 발생하는 미세먼지와 유해한 화학물질 대신, 공기질을 개선하는 데 도움을 주는 효과가 있어요!</string>
+	<string name="electric_vehicle_confirm_title">전기 이동수단 인증하고 포인트를 적립하세요 ⚡️</string>
+	<string name="electric_vehicle_confirm_description_1">전기 이동수단을 이용하면 자동차에서 배출되는 탄소와 유해 물질을 크게 줄일 수 있어요.\n미세먼지와 이산화탄소 배출이 거의 없어 공기 질을 개선하는 데 도움을 주며, 친환경 에너지를 활용할 경우 더욱 지속 가능한 이동이 가능해집니다!\n</string>
+	<string name="electric_vehicle_confirm_description_2">결제 금액, 결제 일시, 사용처가 포함된 스크린샷을 제출해 주세요. 검토 후 포인트를 지급해 드립니다.</string>
 	<string name="electric_vehicle_confirm_btn_description">만약 계좌 등록을 안 했다면?\n계좌 등록 페이지로 넘어갑니다!</string>
 	<string name="electric_vehicle_confirm_btn_title">이용 내역 인증하기</string>
 
 	<!-- 텀블러 인증 -->
-	<string name="tumblr_confirm_title">텀블러 사용을 인증해보세요!</string>
-	<string name="tumblr_confirm_description">우리가 1년 동안 1회용 플라스틱컵을 사용하지않는다면, 연간 19kg의 이산화탄소를 줄일 수 있으며,이는 25년생 중부지방소나무 두 그루를 심는 효과가 있어요!</string>
+	<string name="tumblr_confirm_title">텀블러 인증 QR 제시하여 포인트를 적립하세요 💧</string>
+	<string name="tumblr_confirm_description"> 1년 동안 일회용 플라스틱 컵을 쓰지 않으면, 무려 19kg의 이산화탄소를 절감할 수 있어요. 이는 25년생 소나무 두 그루를 심는 것과 같은 효과입니다!🌳 </string>
 
 	<!-- 대중교통 인증 -->
-	<string name="transit_confirm_title">대중교통 이용을 인증해보세요!</string>
-	<string name="transit_confirm_description">우리가 1년 동안 대중교통을 이용한다면, 온실가스 배출량을 20%이상 줄일 수 있으며 특히, 전기버스나 철도와 같은 친환경적인 대중교통 수단을 채택하면 배충량 감소가 더욱 커질 수 있어요!</string>
+	<string name="transit_confirm_title">대중교통 이용 인증하고 포인트를 적립하세요 🚌</string>
+	<string name="transit_confirm_description_1">대중교통을 이용하면 차량 한 대당 방출되는 탄소 배출량, 미세먼지, 온실가스를 줄여 대기 질 개선에 기여할 수 있어요.\n특히 전기버스와 같은 친환경 대중교통을 채택하면 배출량 감소가 더욱 커질 수 있어요!⚡</string>
+	<string name="transit_confirm_description_2">결제 금액, 결제 일시, 사용처가 포함된 스크린샷을 제출해 주세요. 검토 후 포인트를 지급해 드립니다.</string>
 	<string name="transit_confirm_btn_description">만약 계좌 등록을 안 했다면?\n계좌 등록 페이지로 넘어갑니다!</string>
 	<string name="transit_confirm_btn_title">이용 내역 인증하기</string>
 
